added rest of footers

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <h3>Vanessa Stevenson</h3>
     <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
     <footer>
+      <img src="small-logo.png" alt="Grayed knife/fork">
+      <p>Delicious &#169; &#183; All Rights Reserved.</p>
+      <p>Proudly published with Ghost.</p>
     </footer>
 
   </body>
