--- a/index.html
+++ b/index.html
@@ -3,36 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>Chocolate Pizza</title>
-    <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.google.com/specimen/Yellowtail" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Anton" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Abel" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <section>
-        <div class="header">
-	 </div>
-    <a href="test.html">
-    <img src="choco-pizza.png" style="float:center";>
-    </a>
-    <h1>Delicious</h1>
-    <p>The Best food blog on the web</p>
-	 <div class="footer">
-     <img src="logo.png" style="float:center";>
-	 <p>  </p>
-	 </div>
-      </section>
-      <section>
+
+  <header class="header">
+    <img src="logo.png" class="fork-logo">
+    <div class="title">
+      <h1 class="delicious"> Delicious </h1>
+      <p class="best-food">THE BEST FOOD BLOG ON THE WEB</p>
+    </div>
+
+
+      <section class="header_right">
+       <div class="header_icons">
         <ul>
           <li>
-            <img src="img/fb-icon.png">
+            <img src="fb-icon.png">
           </li>
           <li>
-            <img src="img/twit-icon.png">
+            <img src="twit-icon.png">
           </li>
           <li>
-            <img src="img/gp-icon.png">
+            <img src="gp-icon.png">
           </li>
           <li>
             <img src="insta-icon.png">
@@ -51,8 +48,36 @@
         </ul>
 
       </section>
-        </div>
     </header>
-
-  </body>
-</html>
+    <main>
+      <div class="recipe_title">
+        <h2 id="recipe_name">Chocolate Pizza </h2>
+        <p id="post_date"> POSTED ON 15 DEC 2013/DESSERTS</p>
+      <span>
+        <img id="print-btn" src="print-icon.png">
+        <p id="print">PRINT</p>
+      </span>
+      </div>
+      <div class="pizza_img">
+        <img id="choco_pizza" src="choco-pizza.png">
+      </div>
+      <section>
+        <div id="shopping_list">
+        <ul>
+          <li><input type="checkbox"><label for="l1">1 1/2 cup milk</label></li>
+          <li><input type="checkbox"><label for="l2">12 cup mascarpone</label></li>
+          <li><input type="checkbox"><label for="l3">1/2 tsp pink salt</label></li>
+          <li><input type="checkbox"><label for="l4">1 lb Black Mission Figs</label></li>
+          <li><input type="checkbox"><label for="l5">1/2 cup brown sugar</label></li>
+          <li><input type="checkbox"><label for="l6">2-4 tbsp water</label></li>
+        </ul>
+        <ul>
+          <li><input type="checkbox"><label for="l1">1 1/2 cup heavy cream</label></li>
+          <li><input type="checkbox"><label for="l2">1/3 granulated sugar </label></li>
+          <li><input type="checkbox"><label for="l3">2 egg yolks</label></li>
+          <li><input type="checkbox"><label for="l4">1 lemon, juiced</label></li>
+          <li><input type="checkbox"><label for="l5">2 tbsp butter</label></li>
+          <li><input type="checkbox"><label for="l6">1 cup honey roasted pecans, roughly <br>chopped</br></label></li>
+        </ul>
+        </div>
+      </section>
