--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.google.com/specimen/Yellowtail" rel="stylesheet">
     <link href="https://fonts.google.com/specimen/Anton" rel="stylesheet">
     <link href="https://fonts.google.com/specimen/Abel" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
+
   </head>
   <body>
 
@@ -48,30 +50,30 @@
         </ul>
 
       </section>
+      <img class="break_line" src=>
     </header>
     <main>
       <div class="recipe_title">
-        <h2 id="recipe_name">Chocolate Pizza </h2>
-        <p id="post_date"> POSTED ON 15 DEC 2013/DESSERTS</p>
+        <h2 class="recipe_name">Chocolate Pizza </h2>
+        <p class="post_date"> POSTED ON 15 DEC 2013/DESSERTS</p>
       <span>
-        <img id="print-btn" src="print-icon.png">
-        <p id="print">PRINT</p>
+        <img class="print-btn" src="print-icon.png">
+        <p class="print">PRINT</p>
       </span>
       </div>
       <div class="pizza_img">
-        <img id="choco_pizza" src="choco-pizza.png">
+        <img class="choco_pizza" src="choco-pizza.png">
       </div>
+      <div class="recipe_steps">
       <p>
       For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs set aside and let cool completely.</p>
-
       <p> Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
-      
       <p> Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.
       </p>
-
+    </div>
       <section>
-        <div id="shopping_list">
-        <ul>
+
+        <ul class="shopping_list">
           <li><input type="checkbox"><label for="l1">1 1/2 cup milk</label></li>
           <li><input type="checkbox"><label for="l2">12 cup mascarpone</label></li>
           <li><input type="checkbox"><label for="l3">1/2 tsp pink salt</label></li>
@@ -79,7 +81,7 @@
           <li><input type="checkbox"><label for="l5">1/2 cup brown sugar</label></li>
           <li><input type="checkbox"><label for="l6">2-4 tbsp water</label></li>
         </ul>
-        <ul>
+        <ul class="shopping_list">
           <li><input type="checkbox"><label for="l1">1 1/2 cup heavy cream</label></li>
           <li><input type="checkbox"><label for="l2">1/3 granulated sugar </label></li>
           <li><input type="checkbox"><label for="l3">2 egg yolks</label></li>
