--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Chocolate Pizza</title>
-    <link rel="stylsheet" type="style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylereset" href="reset.css">
   </head>
   <body>
-    <p> For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs set aside and let cool completely.</p>
-    <p> Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissovled and milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
-    <p> Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
+    <p class="ingredients">For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs set aside and let cool completely.</p>
+    <p class="ingredients">Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissovled and milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
+    <p class="ingredients">Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
     <header>
     </header>
     <section>
       <img src="list-bg.png" alt="Notebook paper for written ingredients">
     </section>
-    <section>
-    </section>
+    <div>
+      <img id="profile-pic" src="van-pic.png" alt="Woman image">
     <h3>Vanessa Stevenson</h3>
-    <p>Food enthusiast, photography fan.<img src="van-pic.png" alt="Woman image" align="left">Add a pinch of raw foodism and that's pretty much who I am.</p>
+    <p>Food enthusiast, photography fan.Add a pinch of raw foodism and that's pretty much who I am.</p>
     <button type="button">SHARE RECIPE</button>
+  </div>
     <footer>
       <br>
       <hr>
